--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.mjs",
-    "dev": "node --watch server.mjs"
+    "dev": "node --watch server.mjs",
+    "test-unit": "TEST_MODE=unit vitest --run"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,10 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
+  },
+  "devDependencies": {
+    "chance": "^1.1.12",
+    "supertest": "^7.0.0",
+    "vitest": "^3.0.8"
   }
 }
