--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
     "@react-spring/web": "^9.7.5",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
