Revert "feat(frontend): add page size selection to game history"
This reverts commit 4f46911306446e47b8784fd0b18d2bf868ff123d.

--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://santiago:KWXVwh9uwTsGjIq4@cluster0.4l8bh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://ernesto:123@cluster0.p4e7i.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
 # CLOUDINARY_API_KEY=your_cloudinary_api_key
 # CLOUDINARY_API_SECRET=your_cloudinary_api_secret
