--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,7 @@
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
-    "react-youtube": "^10.1.0",
-    "resolve-configuration": "^2.0.4"
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
