--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tailwind:init": "npx tailwindcss init"
+    "tailwind:init": "npx tailwindcss init",
+    "serve:build": "serve -s dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
